# src/main/java/organisationen/bearbeiten/OrganisationenBearbeitenResource.java
@@ -1,13 +1,16 @@
 package organisationen.bearbeiten;
 
 import java.net.URI;
+import java.util.UUID;
 
+import io.quarkus.hibernate.orm.panache.PanacheEntityBase;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.json.bind.Jsonb;
 import jakarta.transaction.Transactional;
 import jakarta.validation.Valid;
 import jakarta.ws.rs.GET;
 import jakarta.ws.rs.POST;
+import jakarta.ws.rs.PUT;
 import jakarta.ws.rs.Path;
 import jakarta.ws.rs.PathParam;
 import jakarta.ws.rs.core.Response;
@@ -24,22 +27,34 @@ public class OrganisationenBearbeitenResource {
     ArbeitsversionMapper mapper;
 
     @GET
-    @Path("{id}/draft")
-    public Arbeitsversion get(@PathParam("id") Long organisationId) {
+    @Path("{fachschluessel}/draft")
+    public Arbeitsversion get(@PathParam("fachschluessel") UUID fachschluessel) {
 
-        return mapper.toDomainList(ArbeitsversionEntity.list("organisationId", organisationId)).get(0);
+        return mapper.toDomainList(ArbeitsversionEntity.list("fachschluessel", fachschluessel)).get(0);
     }
 
     @POST
-    @Path("{id}/draft")
+    @Path("{fachschluessel}/draft")
     @Transactional
-    public Response createArbeitsversion(@PathParam("id") Long organisationId, @Valid Organisation organisation) {
+    public Response createArbeitsversion(@PathParam("fachschluessel") UUID fachschluessel,
+            @Valid Organisation organisation) {
 
-        ArbeitsversionEntity arbeitsversionEntity = ArbeitsversionEntity.builder().organisationId(organisationId)
+        organisation.setFachschluessel(fachschluessel);
+        ArbeitsversionEntity arbeitsversionEntity = ArbeitsversionEntity.builder().fachschluessel(fachschluessel)
                 .jsonString(jsonb.toJson(organisation)).build();
         arbeitsversionEntity.persist();
 
         return Response.ok(mapper.toDomain(arbeitsversionEntity))
-                .location(URI.create("/organizations/" + organisationId + "/draft")).build();
+                .location(URI.create("/organizations/" + fachschluessel + "/draft")).build();
     }
+
+    @PUT
+    @Path("{fachschluessel}/draft")
+    @Transactional
+    public Response freigeben(@PathParam("fachschluessel") UUID fachschluessel, @Valid Organisation organisation) {
+        ArbeitsversionEntity single = ArbeitsversionEntity.find("fachschluessel", fachschluessel).firstResult();
+        single.jsonString = jsonb.toJson(organisation);
+        return Response.ok().build();
+    }
+
 }
