# src/main/java/organisationen/suchen/modell/Organisation.java
@@ -1,6 +1,7 @@
 package organisationen.suchen.modell;
 
 import java.util.Set;
+import java.util.UUID;
 
 import jakarta.validation.constraints.NotBlank;
 import lombok.Data;
@@ -9,6 +10,7 @@ import lombok.Data;
 public class Organisation {
     Long id;
 
+    UUID fachschluessel;
     @NotBlank
     String name;
     String nummer;
