# src/main/resources/openapi/openapi.json
@@ -52,35 +52,15 @@
         }
       }
     },
-    "/organizations/{id}" : {
-      "get" : {
-        "tags" : [ "Organisationen Suchen Resource" ],
-        "parameters" : [ {
-          "name" : "id",
-          "in" : "path",
-          "required" : true,
-          "schema" : {
-            "format" : "int64",
-            "type" : "integer"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "OK"
-          }
-        }
-      }
-    },
-    "/organizations/{id}/draft" : {
+    "/organizations/{fachschluessel}/draft" : {
       "get" : {
         "tags" : [ "Organisationen Bearbeiten Resource" ],
         "parameters" : [ {
-          "name" : "id",
+          "name" : "fachschluessel",
           "in" : "path",
           "required" : true,
           "schema" : {
-            "format" : "int64",
-            "type" : "integer"
+            "$ref" : "#/components/schemas/UUID"
           }
         } ],
         "responses" : {
@@ -96,15 +76,14 @@
           }
         }
       },
-      "post" : {
+      "put" : {
         "tags" : [ "Organisationen Bearbeiten Resource" ],
         "parameters" : [ {
-          "name" : "id",
+          "name" : "fachschluessel",
           "in" : "path",
           "required" : true,
           "schema" : {
-            "format" : "int64",
-            "type" : "integer"
+            "$ref" : "#/components/schemas/UUID"
           }
         } ],
         "requestBody" : {
@@ -116,6 +95,50 @@
             }
           }
         },
+        "responses" : {
+          "200" : {
+            "description" : "OK"
+          }
+        }
+      },
+      "post" : {
+        "tags" : [ "Organisationen Bearbeiten Resource" ],
+        "parameters" : [ {
+          "name" : "fachschluessel",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "$ref" : "#/components/schemas/UUID"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/Organisation"
+              }
+            }
+          }
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK"
+          }
+        }
+      }
+    },
+    "/organizations/{id}" : {
+      "get" : {
+        "tags" : [ "Organisationen Suchen Resource" ],
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "format" : "int64",
+            "type" : "integer"
+          }
+        } ],
         "responses" : {
           "200" : {
             "description" : "OK"
@@ -152,9 +175,8 @@
             "format" : "int64",
             "type" : "integer"
           },
-          "organisationId" : {
-            "format" : "int64",
-            "type" : "integer"
+          "fachschluessel" : {
+            "$ref" : "#/components/schemas/UUID"
           },
           "organisation" : {
             "$ref" : "#/components/schemas/Organisation"
@@ -177,6 +199,9 @@
             "format" : "int64",
             "type" : "integer"
           },
+          "fachschluessel" : {
+            "$ref" : "#/components/schemas/UUID"
+          },
           "name" : {
             "pattern" : "\\S",
             "type" : "string"
@@ -196,6 +221,11 @@
             }
           }
         }
+      },
+      "UUID" : {
+        "format" : "uuid",
+        "pattern" : "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}",
+        "type" : "string"
       }
     }
   }
